1. merge wksxmpp_chat 2. remove unused code and build variables

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-*.dblite
+# for projects that use SCons for building: http://http://www.scons.org/
+.sconsign.dblite
+.cproject
+.project
+.settings*.dblite
 *.o
 *.os
 *.so
